# Vetinari-Orchestrastor

./: .coverage  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GIT_COMMIT_GUIDE.md  LICENSE  MANIFEST.in  NOTICE  PHASE_3_BUILDER_MIGRATION.md  PHASE_3_EXPLORER_MIGRATION.md  PHASE_4_KICKOFF.md  PHASE_4_STEP_1_COMPLETION.md  PHASE_VERIFICATION_REPORT.md  PONDER_ANALYSIS.txt  QUICK_REFERENCE.md  README.md  ROADMAP.md  SESSION_COMPLETION_REPORT.md  TECHNICAL_IMPLEMENTATION.md  TEST_REPORT.md  THIRD-PARTY-LICENSES.md  UX_IMPROVEMENTS_DETAILED.md  UX_QUICK_REFERENCE.md  builder.py  check_syntax.py  cli.py  conftest.py  coverage.json  enter-vetinari-shell.ps1  executor.py  lmstudio_adapter.py  lmtest.py  model_pool.py  orchestrator.py  project.yaml  (+22 more)
.claude/: settings.json
.vetinari/: thompson_state.json  workflow_patterns.json
config/: cloud_providers.yaml  document_profiles.yaml  error_messages.yaml  integrations.yaml.example  llm_guard.yaml  ml_config.yaml  models.yaml  notifications.yaml  provider_models.yaml  quality_thresholds.yaml  safety_defaults.yaml  sandbox_policy.yaml  task_inference_profiles.json  vet_rules.yaml  writing_style.yaml
deploy/: Dockerfile  docker-compose.otel.yaml  vetinari.service
docker/: docker-compose.yml  searxng-settings.yml
docs/: ARCHITECTURE.md  CONFIG.md  DEVELOPER_GUIDE.md  DRIFT_PREVENTION.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_SUMMARY.md  MIGRATION_INDEX.md  OPENCODE_INTEGRATION.md  PHASE_3_COMPLETION_REPORT.md  PRODUCTION.md  SKILL_MIGRATION_GUIDE.md  STRUCTURED_LOGGING_PLAN.md  api-contracts.md  api-reference-analytics.md  api-reference-dashboard.md  approval_workflow.md  coding_agent.md  memory_abstraction.md  memory_merge_policy.md  memory_schema.md  registry.md  troubleshooting.md
dry_run_demo_pkg/: README.md  pyproject.toml  setup.py
dry_run_demo_pkg/dry_run_demo_pkg/: __init__.py  __main__.py
examples/: analytics_example.py  builder_skill_example.py  dashboard_curl_examples.sh  dashboard_example.py  dashboard_rest_api_example.py  evaluator_skill_example.py  explorer_skill_example.py  librarian_skill_example.py  phase0_demo.py
logs/: coverage_report.txt
manifest/: vetinari.yaml
migrations/: upgrade_subtask_schema_v1_to_v2.py
model_cache/: claude_-1266017130840586935.json  claude_-2271218359684924368.json  claude_-2506260035797748900.json  claude_-2627987661772827180.json  claude_-2781386100332232436.json  claude_-2823059319450229705.json  claude_-3231551645857607555.json  claude_-3255093282429953413.json  claude_-3308870948114746121.json  claude_-4413753659544126815.json  claude_-6321467790391557612.json  claude_-6508195111338571665.json  claude_-6514980160573465765.json  claude_-6596676018029027473.json  claude_-6784663387833060322.json  claude_-7678460273156843254.json  claude_-7689794744511317922.json  claude_-801902473006607953.json  claude_-8099229700183147338.json  claude_-8173242301079631721.json  claude_-8338661570147647147.json  claude_-8346775572991651925.json  claude_-8675819266566538008.json  claude_-8811185102068495088.json  claude_-8910850852627250693.json  claude_-8911382856746474815.json  claude_-9050771100666435722.json  claude_1222706696830026041.json  claude_1832705598470363264.json  claude_255172520605043499.json  claude_271416608451883102.json  claude_288237023905233976.json  claude_3275431782337621989.json  claude_3414363508484093895.json  claude_3970039919969099674.json  claude_4166527821659953582.json  claude_4376749134396550987.json  claude_4415780586141277763.json  claude_5174293430773244397.json  claude_5634654893650598580.json  (+62 more)
prompts/: t1_init.txt  t1_post.txt  t1_run.txt  t2_init.txt  t2_post.txt  t2_run.txt
scripts/: README.md  _fuzz_failures.py  check_agent_capabilities.py  check_audit_prevention.py  check_ci_release_proof.py  check_config_wiring.py  check_coverage_gate.py  check_doc_contract_alignment.py  check_migration_index.py  check_monkey_chains.py  check_noqa_suppressions.py  check_publication_boundary.py  check_syntax.py  check_test_quality.py  check_vetinari_rules.py  check_wiring_audit.py  create_adrs.py  file_context.py  fix_vet023.py  fix_vet120.py  fix_vet123.py  generate_architecture.py  generate_config_docs.py  generate_route_to_test_matrix.py  impact_analysis.py  impact_map.py  lmtest.py  migrate_to_unified_db.py  pre_release_gate.py  release_doctor.py  run_benchmarks.py  run_mypy_gate.py  run_tests.py  semgrep_scan.py  test_summary.py  validate_vetinari.py  verify_wiring.py
system_prompts/: uncensored thinking.txt
templates/: versions.json
tests/: __init__.py  _gen_tests.py  _write_tests_helper.py  conftest.py  conftest_stubs.py  factories.py  fakes.py  test_a2a.py  test_a2a_protocol.py  test_acon.py  test_action_classifier.py  test_adapter_manager.py  test_adapters_base.py  test_adapters_providers.py  test_adapters_registry.py  test_admin_auth_hardening.py  test_adr_markdown.py  test_adr_supersession.py  test_adversarial.py  test_adversarial_tests.py  test_agent_affinity.py  test_agent_contracts.py  test_agent_contracts_extended.py  test_agent_dashboard.py  test_agent_drift.py  test_agent_graph.py  test_agent_permissions.py  test_agent_receipts.py  test_agent_scope_enforcement.py  test_agent_tool_wiring.py  test_agents_api_hierarchy.py  test_agents_contracts.py  test_agents_coverage.py  test_ai_workflow_drift.py  test_analytics_anomaly.py  test_analytics_cost.py  test_analytics_forecasting.py  test_analytics_rest_api.py  test_analytics_sla.py  test_analytics_wiring.py  (+499 more)
ui/: README.md
vault/: .key
vetinari/: __init__.py  __main__.py  adapter_manager.py  adr.py  agent_affinity.py  assignment_pass.py  audit.py  backend_config.py  blackboard.py  builder.py  cascade_router.py  cli.py  cli_agent.py  cli_commands.py  cli_devops.py  cli_packaging.py  cli_packaging_data.py  cli_packaging_doctor.py  cli_packaging_models.py  cli_packaging_models_local.py  cli_packaging_models_remote.py  cli_startup.py  cli_training.py  config.py  (+101 more)
vetinari.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+1250 files in other folders)
