[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vetinari"
dynamic = ["version"]
description = "Comprehensive AI Orchestration System with multi-agent assembly-line execution, token optimization, and local-cloud hybrid inference"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Vetinari" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "flask>=2.0.0",
    "apscheduler>=3.10.0",
    "duckduckgo-search>=4.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
cloud = [
    "anthropic>=0.20.0",
    "openai>=1.0.0",
    "google-generativeai>=0.4.0",
    "cohere>=5.0.0",
]
crypto = ["cryptography>=41.0.0"]
search = [
    "duckduckgo-search>=4.0.0",
    "tavily-python>=0.3.0",
]
ml = [
    "numpy>=1.24.0",
    "dspy-ai>=2.0",
    "chromadb>=0.4",
    "pynvml>=11.0",
]
guardrails = ["nemoguardrails>=0.20.0"]
observability = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
training = [
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "scipy>=1.10",
    "tiktoken>=0.5",
    "torch>=2.0",
    "datasets>=2.14",
    "peft>=0.9",
    "trl>=0.8",
    "unsloth",
    "huggingface-hub>=0.20",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]
all = [
    "vetinari[cloud,crypto,search,ml,guardrails,observability,training,dev]",
]

[project.scripts]
vetinari = "vetinari.cli:main"

[project.urls]
Repository = "https://github.com/vetinari-ai/vetinari"

# ---------------------------------------------------------------------------
# Tool Configuration
# ---------------------------------------------------------------------------

[tool.setuptools.dynamic]
version = { attr = "vetinari.__version__" }

[tool.setuptools.packages.find]
include = ["vetinari*"]
exclude = ["tests*", "outputs*", "projects*", "examples*"]

[tool.setuptools.package-data]
vetinari = ["py.typed"]

# ---------------------------------------------------------------------------
# Ruff — fast Python linter & formatter (replaces flake8 + isort + black)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["vetinari"]

[tool.ruff.lint]
# VET* are custom project rules from scripts/check_vetinari_rules.py; mark as external
# so ruff does not flag them as unknown noqa codes.
external = ["VET"]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (modern syntax)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "RUF",  # ruff-specific
    "C4",   # flake8-comprehensions (unnecessary list/dict/set calls)
    "PT",   # flake8-pytest-style (test conventions)
    "ERA",  # eradicate (commented-out code detection)
    "TID",  # flake8-tidy-imports (banned imports enforcement)
    "T20",  # flake8-print (print statement detection)
    "S",    # flake8-bandit (security, supplements standalone bandit)
    "D",    # pydocstyle (docstring conventions — Google style)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function call in argument defaults
    "B905",   # zip strict (not always needed)
    "SIM108", # ternary operator (readability preference)
    "RUF012", # mutable class variables (dataclass pattern)
    # UP007 removed — full migration to X | Y union syntax now active
    "ERA001", # commented-out code (use VET036 custom rule instead — fewer false positives)
    "S101",   # assert in non-test code (handled per-file)
    "D100",   # missing module docstring (use VET095 custom rule instead — smarter exemptions)
    "D101",   # missing class docstring (use VET090 custom rule — smarter exemptions)
    "D102",   # missing method docstring (use VET090 custom rule — smarter exemptions)
    "D103",   # missing function docstring (use VET090 custom rule — smarter exemptions)
    "D104",   # missing public package docstring (__init__.py)
    "D105",   # missing magic method docstring (dunder methods)
    "D106",   # missing nested class docstring
    "D107",   # missing __init__ docstring
    "D203",   # one blank line before class docstring (conflicts with D211)
    "D213",   # multi-line docstring summary on second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", "T20", "ERA", "D",          # assert ok, print ok, commented code ok, docstrings relaxed
    "PT009", "PT011", "PT013", "PT017", "PT019",  # unittest-style assertions OK in tests
    "TID251",                            # banned imports OK in tests (typing.Optional etc.)
    "S105", "S106", "S107", "S108", "S110", "S113", "S104", "S324", "S607", "S311",  # security OK in test fixtures
    "E402",                              # late imports OK in tests (imports after fixture setup)
    "E701", "E702",                      # multiple statements OK in test helpers
    "RUF001", "RUF002", "RUF003",        # ambiguous unicode OK in test strings/data
    "SIM105", "SIM115", "SIM117",        # simplification preferences flexible in tests
    "B017",                              # blind except OK in negative-path tests
    "PT012",                             # multiple statements in pytest.raises OK for context manager combos
    "F401",                              # unused imports OK (imports for side-effects / conftest)
]
"scripts/*" = ["T20", "D"]               # print ok, docstrings relaxed in scripts
"vetinari/__main__.py" = ["T20"]          # print ok in entry point
"vetinari/cli.py" = ["T20"]              # print ok in CLI interface
"vetinari/benchmarks/*" = ["T20", "D"]   # print ok, docstrings relaxed in benchmarks
"conftest.py" = ["S101", "D"]            # assert ok, docstrings relaxed in conftest

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"vetinari.agents.contracts.AgentType".msg = "Import AgentType from vetinari.types instead"
"vetinari.agents.contracts.TaskStatus".msg = "Import TaskStatus from vetinari.types instead"
"vetinari.agents.contracts.ExecutionMode".msg = "Import ExecutionMode from vetinari.types instead"
"vetinari.agents.contracts.PlanStatus".msg = "Import PlanStatus from vetinari.types instead"

[tool.ruff.lint.isort]
known-first-party = ["vetinari"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-q",
    "--tb=short",
    "--strict-markers",
    "--timeout=30",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring LM Studio",
    "security: marks security-related tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false          # too strict for existing codebase
check_untyped_defs = true
ignore_missing_imports = true          # many optional deps
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "vetinari.adapters.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "vetinari.analytics.*"
disallow_untyped_defs = true

# ---------------------------------------------------------------------------
# Bandit (security linter)
# ---------------------------------------------------------------------------

[tool.bandit]
exclude_dirs = ["tests", "outputs", "projects", "examples"]
skips = ["B101"]  # assert used intentionally in non-test code

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["vetinari"]
omit = [
    "vetinari/__pycache__/*",
    "vetinari/training/*",
    "vetinari/benchmarks/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
